--- a/Sonstiges.html
+++ b/Sonstiges.html
@@ -80,7 +80,7 @@
                     ist natürlich stetig da! Sollte euch das Team interessieren oder ihr wollt mal scrimmen oder ihr
                     wollt einfach mal nur vorbeischauen seid ihr herzlich eingeladen, unserem Discordserver beizutreten
                     :D</p>
-                <a href="https://discord.gg/jsYu43Yq" target="_blank" type="button"
+                <a href="https://discord.gg/JjGtkPWjNY" target="_blank" type="button"
                    class="btn btn-outline-BReady-red">Zum B-Ready Discord</a>
             </div>
         </div>
