--- a/Sonstiges.html
+++ b/Sonstiges.html
@@ -70,7 +70,7 @@
 <section class="p-5">
     <div class="container">
         <div class="d-flex justify-content-around flex-wrap-reverse flex-xl-nowrap">
-            <img class="img-fluid w-50" src="data/pictures/B-Ready-Nutella.png" alt="Logo von B-Ready">
+            <img class="img-fluid w-50 pe-xl-5" src="data/pictures/B_ready_Logo_Ronja_bearbeitet.png" alt="Logo von B-Ready">
             <div class="text-center text-xl-start text-black-50 pe-lg-3 pe-xl-5 pb-4 pb-xl-0">
                 <h3>Mein Splatoon Team B-Ready!</h3>
                 <p class="lead">Streamen ist schön und gut, Splatoon 2 auch, aber geht da noch mehr? Natürlich. Und zwar
