--- a/Twitch.html
+++ b/Twitch.html
@@ -517,7 +517,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">25.10.21 - 31.10.21</p>
+                <p class="lead">01.11.21 - 07.11.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -535,10 +535,10 @@
                     <tr>
                         <th scope="row">12:00 - 13:30</th>
                         <td>-</td>
+                        <td>Programmieren(Unity)(Ausfall)</td>
+                        <td>-</td>
+                        <td>-</td>
                         <td>Programmieren(Unity)</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -548,7 +548,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>Programmieren(Unity)</td>
-                        <td>Programmieren(Unity)</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -628,7 +628,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">01.11.21 - 07.11.21</p>
+                <p class="lead">08.11.21 - 14.11.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
