--- a/Twitch.html
+++ b/Twitch.html
@@ -517,117 +517,6 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">01.11.21 - 07.11.21</p>
-                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">Streamzeiten</th>
-                        <th scope="col">Montag</th>
-                        <th scope="col">Dienstag</th>
-                        <th scope="col">Mittwoch</th>
-                        <th scope="col">Donnerstag</th>
-                        <th scope="col">Freitag</th>
-                        <th scope="col">Samstag</th>
-                        <th scope="col">Sonntag</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">12:00 - 13:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">13:30 - 15:00</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Animal Crossing New Horizons</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">15:00 - 16:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Subnautica Below Zero</td>
-                        <td>Animal Crossing New Horizons</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">16:30 - 18:00</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Minecraft</td>
-                        <td>Mario Kart 8 Deluxe</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">18:00 - 19:30</th>
-                        <td>Transport Fever 2</td>
-                        <td>Knockout City</td>
-                        <td>-</td>
-                        <td>Minecraft</td>
-                        <td>Splatoon 2</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">19:30 - 21:00</th>
-                        <td>Transport Fever 2</td>
-                        <td>Splatoon 2</td>
-                        <td>-</td>
-                        <td>Rocket League</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">21:00 - 22:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">22:30 - 00:00</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">00:00 - 01:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div>
-            <div class="table-responsive">
                 <p class="lead">08.11.21 - 14.11.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
@@ -658,6 +547,117 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
+                        <td>Animal Crossing New Horizons (Ersatz)</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">15:00 - 16:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Mario Kart 8 Deluxe (Ersatz)</td>
+                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">16:30 - 18:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Splatoon 2 (Ersatz)</td>
+                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">18:00 - 19:30</th>
+                        <td>Transport Fever 2</td>
+                        <td>Knockout City</td>
+                        <td>Animal Crossing New Horizons</td>
+                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">19:30 - 21:00</th>
+                        <td>Transport Fever 2</td>
+                        <td>Splatoon 2</td>
+                        <td>Rocket League</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">21:00 - 22:30</th>
+                        <td>-</td>
+                        <td>Transport Fever 2</td>
+                        <td>Transport Fever 2 (Ersatz)</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">22:30 - 00:00</th>
+                        <td>-</td>
+                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">00:00 - 01:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div>
+            <div class="table-responsive">
+                <p class="lead">15.11.21 - 21.11.21</p>
+                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">Streamzeiten</th>
+                        <th scope="col">Montag</th>
+                        <th scope="col">Dienstag</th>
+                        <th scope="col">Mittwoch</th>
+                        <th scope="col">Donnerstag</th>
+                        <th scope="col">Freitag</th>
+                        <th scope="col">Samstag</th>
+                        <th scope="col">Sonntag</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">12:00 - 13:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">13:30 - 15:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -687,8 +687,8 @@
                         <th scope="row">18:00 - 19:30</th>
                         <td>Transport Fever 2</td>
                         <td>Knockout City</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
-                        <td>Minecraft</td>
                         <td>Splatoon 2</td>
                         <td>-</td>
                         <td>-</td>
@@ -697,8 +697,8 @@
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
                         <td>Splatoon 2</td>
-                        <td>-</td>
                         <td>Rocket League</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -706,8 +706,8 @@
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
                         <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>Transport Fever 2</td>
+                        <td>Minecraft</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
