--- a/Twitch.html
+++ b/Twitch.html
@@ -517,7 +517,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">08.11.21 - 14.11.21</p>
+                <p class="lead">15.11.21 - 21.11.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -547,7 +547,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons (Ersatz)</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -557,8 +557,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Mario Kart 8 Deluxe (Ersatz)</td>
-                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td>Subnautica Below Zero</td>
+                        <td>Animal Crossing New Horizons (+ kleines Special zum 1. Geburtstag des Twitch)</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -567,8 +567,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Splatoon 2 (Ersatz)</td>
-                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td>Minecraft</td>
+                        <td>Mario Kart 8 Deluxe</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -576,9 +576,9 @@
                         <th scope="row">18:00 - 19:30</th>
                         <td>Transport Fever 2</td>
                         <td>Knockout City</td>
-                        <td>Animal Crossing New Horizons</td>
-                        <td><span class="fst-italic">Ausfall</span></td>
-                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td>Subnautica Below Zero</td>
+                        <td>-</td>
+                        <td>Splatoon 2</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -596,7 +596,7 @@
                         <th scope="row">21:00 - 22:30</th>
                         <td>-</td>
                         <td>Transport Fever 2</td>
-                        <td>Transport Fever 2 (Ersatz)</td>
+                        <td>Minecraft</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -605,7 +605,7 @@
                     <tr>
                         <th scope="row">22:30 - 00:00</th>
                         <td>-</td>
-                        <td><span class="fst-italic">Ausfall</span></td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -628,7 +628,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">15.11.21 - 21.11.21</p>
+                <p class="lead">22.11.21 - 28.11.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
