--- a/Twitch.html
+++ b/Twitch.html
@@ -517,7 +517,118 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">15.11.21 - 21.11.21</p>
+                <p class="lead">22.11.21 - 28.11.21</p>
+                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">Streamzeiten</th>
+                        <th scope="col">Montag</th>
+                        <th scope="col">Dienstag</th>
+                        <th scope="col">Mittwoch</th>
+                        <th scope="col">Donnerstag</th>
+                        <th scope="col">Freitag</th>
+                        <th scope="col">Samstag</th>
+                        <th scope="col">Sonntag</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">12:00 - 13:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">13:30 - 15:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Animal Crossing New Horizons (Ersatz)</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">15:00 - 16:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Mario Kart 8 Deluxe (Ersatz)</td>
+                        <td><span class="fst-italic">Ausfall!</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">16:30 - 18:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Splatoon 2 (Ersatz)</td>
+                        <td><span class="fst-italic">Ausfall!</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">18:00 - 19:30</th>
+                        <td><span class="fst-italic">Ausfall!</span></td>
+                        <td>Rocket League</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td><span class="fst-italic">Ausfall!</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">19:30 - 21:00</th>
+                        <td><span class="fst-italic">Ausfall!</span></td>
+                        <td>Splatoon 2</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">21:00 - 22:30</th>
+                        <td>-</td>
+                        <td>Transport Fever 2</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Transport Fever 2</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">22:30 - 00:00</th>
+                        <td>-</td>
+                        <td>Minecraft</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Variabel</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">00:00 - 01:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div>
+            <div class="table-responsive">
+                <p class="lead">29.11.21 - 05.12.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -557,8 +668,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Subnautica Below Zero</td>
-                        <td>Animal Crossing New Horizons (+ kleines Special zum 1. Geburtstag des Twitch)</td>
+                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
+                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -567,26 +678,26 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Minecraft</td>
-                        <td>Mario Kart 8 Deluxe</td>
+                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
+                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td>Transport Fever 2</td>
-                        <td>Knockout City</td>
-                        <td>Subnautica Below Zero</td>
+                        <td>Knockout City (Noch unsicher)</td>
+                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
                         <td>-</td>
-                        <td>Splatoon 2</td>
+                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
-                        <td>Splatoon 2</td>
-                        <td>Rocket League</td>
+                        <td>Splatoon 2 (Noch unsicher)</td>
+                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -595,8 +706,8 @@
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
                         <td>-</td>
-                        <td>Transport Fever 2</td>
-                        <td>Minecraft</td>
+                        <td>Transport Fever 2 (Noch unsicher)</td>
+                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -628,7 +739,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">22.11.21 - 28.11.21</p>
+                <p class="lead">06.12.21 - 12.12.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
