--- a/Twitch.html
+++ b/Twitch.html
@@ -517,117 +517,6 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">22.11.21 - 28.11.21</p>
-                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">Streamzeiten</th>
-                        <th scope="col">Montag</th>
-                        <th scope="col">Dienstag</th>
-                        <th scope="col">Mittwoch</th>
-                        <th scope="col">Donnerstag</th>
-                        <th scope="col">Freitag</th>
-                        <th scope="col">Samstag</th>
-                        <th scope="col">Sonntag</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">12:00 - 13:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">13:30 - 15:00</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Animal Crossing New Horizons (Ersatz)</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">15:00 - 16:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Mario Kart 8 Deluxe (Ersatz)</td>
-                        <td><span class="fst-italic">Ausfall!</span></td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">16:30 - 18:00</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Splatoon 2 (Ersatz)</td>
-                        <td><span class="fst-italic">Ausfall!</span></td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">18:00 - 19:30</th>
-                        <td><span class="fst-italic">Ausfall!</span></td>
-                        <td>Rocket League</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td><span class="fst-italic">Ausfall!</span></td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">19:30 - 21:00</th>
-                        <td><span class="fst-italic">Ausfall!</span></td>
-                        <td>Splatoon 2</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">21:00 - 22:30</th>
-                        <td>-</td>
-                        <td>Transport Fever 2</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Transport Fever 2</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">22:30 - 00:00</th>
-                        <td>-</td>
-                        <td>Minecraft</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Variabel</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">00:00 - 01:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div>
-            <div class="table-responsive">
                 <p class="lead">29.11.21 - 05.12.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
@@ -668,8 +557,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
-                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
+                        <td>-</td>
+                        <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -678,26 +567,26 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
-                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
+                        <td>-</td>
+                        <td>Mario Kart 8 Deluxe</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
-                        <td>Transport Fever 2</td>
-                        <td>Knockout City (Noch unsicher)</td>
-                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
                         <td>-</td>
-                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
+                        <td>Rocket League</td>
+                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
+                        <td>Splatoon 2</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
-                        <td>Splatoon 2 (Noch unsicher)</td>
-                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
+                        <td>Splatoon 2</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -705,9 +594,9 @@
                     </tr>
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
+                        <td>Transport Fever 2</td>
+                        <td>League of Legends</td>
                         <td>-</td>
-                        <td>Transport Fever 2 (Noch unsicher)</td>
-                        <td><span class="fst-italic">Ausfall! (Bin in London)</span></td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -716,7 +605,7 @@
                     <tr>
                         <th scope="row">22:30 - 00:00</th>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Transport Fever 2</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -779,7 +668,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Subnautica Below Zero</td>
+                        <td>-</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>-</td>
@@ -789,15 +678,15 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Minecraft</td>
+                        <td>-</td>
                         <td>Mario Kart 8 Deluxe</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
-                        <td>Transport Fever 2</td>
-                        <td>Knockout City</td>
+                        <td>-</td>
+                        <td>Rocket League</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>Splatoon 2</td>
@@ -808,7 +697,7 @@
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
                         <td>Splatoon 2</td>
-                        <td>Rocket League</td>
+                        <td>Variabel</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -816,9 +705,9 @@
                     </tr>
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
-                        <td>-</td>
                         <td>Transport Fever 2</td>
-                        <td>Minecraft</td>
+                        <td>Transport Fever 2</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -827,7 +716,7 @@
                     <tr>
                         <th scope="row">22:30 - 00:00</th>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Minecraft</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
