--- a/Twitch.html
+++ b/Twitch.html
@@ -517,117 +517,6 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">29.11.21 - 05.12.21</p>
-                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">Streamzeiten</th>
-                        <th scope="col">Montag</th>
-                        <th scope="col">Dienstag</th>
-                        <th scope="col">Mittwoch</th>
-                        <th scope="col">Donnerstag</th>
-                        <th scope="col">Freitag</th>
-                        <th scope="col">Samstag</th>
-                        <th scope="col">Sonntag</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">12:00 - 13:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">13:30 - 15:00</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">15:00 - 16:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Animal Crossing New Horizons</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">16:30 - 18:00</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Mario Kart 8 Deluxe</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">18:00 - 19:30</th>
-                        <td>-</td>
-                        <td>Rocket League</td>
-                        <td>Animal Crossing New Horizons</td>
-                        <td>-</td>
-                        <td>Splatoon 2</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">19:30 - 21:00</th>
-                        <td>Transport Fever 2</td>
-                        <td>Splatoon 2</td>
-                        <td>Variabel</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">21:00 - 22:30</th>
-                        <td>Transport Fever 2</td>
-                        <td>League of Legends</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">22:30 - 00:00</th>
-                        <td>-</td>
-                        <td>Transport Fever 2</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">00:00 - 01:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div>
-            <div class="table-responsive">
                 <p class="lead">06.12.21 - 12.12.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
@@ -669,6 +558,117 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
+                        <td><span class="fst-italic">Ausfall!</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">16:30 - 18:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td><span class="fst-italic">Ausfall!</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">18:00 - 19:30</th>
+                        <td>-</td>
+                        <td>Rocket League</td>
+                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
+                        <td><span class="fst-italic">Ausfall!</span></td>
+                        <td>-</td>
+                        <td>Phasmophobia (Collab mit Uzu)</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">19:30 - 21:00</th>
+                        <td>Transport Fever 2</td>
+                        <td>Variabel</td>
+                        <td>Variabel</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Phasmophobia (Collab mit Uzu)</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">21:00 - 22:30</th>
+                        <td>Transport Fever 2</td>
+                        <td>Variabel</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">22:30 - 00:00</th>
+                        <td>-</td>
+                        <td>Transport Fever 2/Minecraft</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">00:00 - 01:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div>
+            <div class="table-responsive">
+                <p class="lead">13.12.21 - 19.12.21</p>
+                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">Streamzeiten</th>
+                        <th scope="col">Montag</th>
+                        <th scope="col">Dienstag</th>
+                        <th scope="col">Mittwoch</th>
+                        <th scope="col">Donnerstag</th>
+                        <th scope="col">Freitag</th>
+                        <th scope="col">Samstag</th>
+                        <th scope="col">Sonntag</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">12:00 - 13:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">13:30 - 15:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">15:00 - 16:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Irgendwann Hier FNAF Security Breach Hype</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>-</td>
                         <td>-</td>
